# bazel-gazelle

./: README.rst  WORKSPACE  def.bzl  deps.bzl  go.mod  go.sum
cmd/gazelle/: BUILD.bazel  fix-update.go  integration_test.go  js_test.go  langs.go
internal/: go_repository_tools_srcs.bzl
language/js/: BUILD.bazel  config.go  config_test.go  fileinfo.go  fileinfo_test.go  fix.go  generate.go  kinds.go  lang.go  resolve.go  resolve_test.go
language/js/closure_library/: BUILD
resolve/: index.go
rule/: rule.go
walk/: BUILD.bazel  config.go  walk.go  walk_test.go
