load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "fileinfo.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/language/js",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//flag:go_default_library",
        "//label:go_default_library",
        "//language:go_default_library",
        "//pathtools:go_default_library",
        "//repo:go_default_library",
        "//resolve:go_default_library",
        "//rule:go_default_library",
        "//language/js/closure_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fileinfo_test.go",
        "resolve_test.go",
        "config_test.go",
    ],
    embed = [":go_default_library"],
)
